fix()[]: skills assets on mobile view

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,9 @@ $grey: #52606d;
 $green: #06c847;
 $blue: #2251cc;
 $light-blue: #0593fb;
+$dark-blue: #171f3f;
 $white: #ffffff;
 $alice-blue: #f5f7fa;
 $light-gray: #cbd2d9;
 $sauvignon: #e5e8ec;
+$mobile: 767px;
