--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -1,7 +1,7 @@
 .contact {
   margin: 0 auto;
-  max-width: 1184px;
-  padding-bottom: 8rem;
+  max-width: 1216px;
+  padding: 0 16px 8rem;
 
   &__title {
     margin: 0;
