--- a/src/scss/modules/hero.scss
+++ b/src/scss/modules/hero.scss
@@ -1,15 +1,22 @@
 .hero {
-  max-width: 1184px;
-  padding: 7rem 0 11.5rem;
+  max-width: 1216px;
+  padding: calc(8rem - 16px) 16px 11.5rem;
   margin: 0 auto;
+  @media (max-width: $mobile) {
+    padding: 64px 16px 120px;
+  }
   text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 
   &__image {
-    width: 6.75rem;
-    height: 6.75rem;
+    width: 120px;
+    height: 120px;
     border: 0.25rem solid $light-gray;
     border-radius: 4.375rem;
     padding: 0.125rem;
+    @media (max-width: $mobile) {
+      width: 80px;
+      height: 80px;
+    }
   }
   &__title {
     font-family: Poppins;
