--- a/src/scss/modules/skills.scss
+++ b/src/scss/modules/skills.scss
@@ -1,5 +1,6 @@
 .skills {
-  max-width: 1184px;
+  max-width: 1216px;
+  padding: 0 16px;
   margin: 0 auto;
 
   &__title {
@@ -44,8 +45,8 @@
       top: 0.75rem;
       content: "";
       display: block;
-      width: 1rem;
-      height: 1rem;
+      width: 16px;
+      height: 16px;
       margin: 0;
       background: url("../../assets/img/green.svg");
       .skills-list--violet & {
@@ -53,6 +54,17 @@
       }
       .skills-list--blue & {
         background: url("../../assets/img/blue.svg");
+      }
+      @media (max-width: $mobile) {
+        width: 12px;
+        height: 12px;
+        background: url("../../assets/img/green-mobile.svg");
+        .skills-list--blue & {
+          background: url("../../assets/img/blue-mobile.svg");
+        }
+        .skills-list--violet & {
+          background: url("../../assets/img/violet-mobile.svg");
+        }
       }
     }
   }
